Removes usage of IAudioClock in WASAPI input audio streams

This change removes usage of IAudioClock::GetPosition since it:

* Caused incorrect input audio capture time on Windows.
* Could lead to duplicate timestamps in Breakout Box.
* Should not be used at all in real-time threads since it is blocking,
  involves a switch from user-mode to kernel-mode and back and can cause
  glitches.

The change also starts using IAudioCaptureClient::GetNextPacketSize since
it makes it possible to clean up the structure and readability of the
inner while loop which feeds us with captured audio. The performance and
behavior is not changed by this.

Adds four new UMA histograms:

* Media.Audio.Capture.Win.Glitches: counts total number of
  AUDCLNT_BUFFERFLAGS_DATA_DISCONTINUITY warnings during a session.
* Media.Audio.Capture.Win.TimestampErrors: counts total number of
  AUDCLNT_BUFFERFLAGS_TIMESTAMP_ERROR during a session.
* Media.Audio.Capture.Win.TimeUntilFirstTimestampError: counts time from
  start of input audio until first timestamp error was detected.
* Media.Audio.Capture.Win.MonotonicTimestamps: indicates if a non-
  monotonic timestamp sequence was detected or not.

Bug: 825744, 1181547
Change-Id: Ie4c4e4f05148bb4f3db5a7a264f8adb4047deb36
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2807621
Commit-Queue: Henrik Andreasson <henrika@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Reviewed-by: Thomas Guilbert <tguilbert@chromium.org>
Reviewed-by: Caitlin Fischer <caitlinfischer@google.com>
Cr-Commit-Position: refs/heads/master@{#871258}